@@ -1891,17 +1891,17 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label">{{ form.vectra_secret_key.label }}</label>
-                          <div class="col-sm-5">
-                            {{ form.vectra_secret_key }}
-                            {{ form.vectra_secret_key.errors|safe }}
-                          </div>
-                        </div>
-                        <div class="form-group">
                           <label class="col-sm-3 control-label">{{ form.vectra_client_id.label }}</label>
                           <div class="col-sm-5">
                             {{ form.vectra_client_id }}
                             {{ form.vectra_client_id.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.vectra_secret_key.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.vectra_secret_key }}
+                            {{ form.vectra_secret_key.errors|safe }}
                           </div>
                         </div>
                       </div>
