@@ -18,6 +18,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [NETWORK] Correctly assign a new/changed IPv6 IP to an existing interface
 - [FRONTEND] JSONField default value
 - [FRONTEND] Redis settings improperly displayed
+- [API_PARSER] [VECTRA] Correctly allow to test the Collector before saving it
 
 
 ## [2.15.4] - 2024-05-27
